プラグイン情報を表示

--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -9,6 +9,13 @@ juce_add_plugin(JuceWebViewPlugin
     NEEDS_WEBVIEW2 TRUE
 )
 
+get_target_property(PRODUCT_NAME JuceWebViewPlugin JUCE_PRODUCT_NAME)
+get_target_property(COMPANY_NAME JuceWebViewPlugin JUCE_COMPANY_NAME)
+target_compile_definitions(JuceWebViewPlugin PRIVATE
+    JUCE_PRODUCT_NAME="${PRODUCT_NAME}"
+    JUCE_COMPANY_NAME="${COMPANY_NAME}"
+    JUCE_PRODUCT_VERSION="${PROJECT_VERSION}")
+
 target_sources(JuceWebViewPlugin
     PRIVATE src/PluginEditor.cpp src/PluginProcessor.cpp)
 
