--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -24,6 +24,7 @@ target_include_directories(JuceWebViewPlugin PRIVATE include)
 target_link_libraries(JuceWebViewPlugin
     PRIVATE
         juce::juce_audio_utils
+        juce::juce_dsp
     PUBLIC
         juce::juce_recommended_config_flags
         juce::juce_recommended_lto_flags
